k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ares
  namespace: ares
spec:
  type: ClusterIP
  selector:
    app: ares
  ports:
    - port: 80
      targetPort: 80
